# Vehicle_Number_Plate_Detection

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  render.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/config/: README.md
backend/config/default/: app.yaml  ml.yaml
backend/config/development/: app.yaml
backend/scripts/: README.md  build_frontend_bundle.py  check_imports.py  test_workflow_start.py
backend/src/sentinel_anpr/: README.md  __init__.py
backend/src/sentinel_anpr/application/: README.md
backend/src/sentinel_anpr/application/dto/: README.md  account_profile_dto.py  analytics_dto.py  attribute_dto.py  auth_dto.py  blockchain_dto.py  challan_dto.py  chat_dto.py  clone_detection_dto.placeholder  dashboard_dto.py  executive_dashboard_dto.py  health_dto.py  history_dto.py  investigation_reports_dto.py  persistence_dto.py  plate_detection_dto.py  police_officer_portal_dto.py  recognition_dto.py  report_dto.py  risk_dto.py  scene_analysis_dto.py  station_admin_portal_dto.py  station_management_dto.py  upload_dto.py  user_management_dto.py  vehicle_detection_dto.py  vehicle_dto.py  verification_dto.placeholder  visible_vehicle_count_dto.py  workflow_dto.py
backend/src/sentinel_anpr/bootstrap/: app_entry.py
backend/src/sentinel_anpr/domain/: README.md
backend/src/sentinel_anpr/infrastructure/: README.md  __init__.py
backend/src/sentinel_anpr/interfaces/: __init__.py
backend/tests/: README.md  conftest.py
backend/tests/fixtures/fakes/: fake_sighting_repository.placeholder  fake_vehicle_registry.placeholder
(+640 files in other folders)
