[project]
name = "sentinel-anpr"
version = "0.1.0"
description = "SentinelANPR AI — ANPR verification and clone detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

vision = [
    "httpx>=0.28.0",
]

[project.scripts]
sentinel-anpr = "sentinel_anpr.bootstrap.app_entry:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
